[package]
name = "witter-backend"
version = "0.1.0"
authors = ["Amit Bansal <amitbansal26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.7.0", features=["attributes", "unstable"]}
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.117", features=["derive"]}
serde_json = "1.0.59"
sqlx = { version = "0.4.1", features=["macros", "chrono", "json", "postgres", "uuid",  "runtime-async-std-native-tls"] }
tide = "0.15.0"
uuid = "0.8.1"
